cargo-features = []

[workspace]
resolver = "3"
members = ["cli", "lib", "lib/gen-protos", "lib/proc-macros", "lib/testutils"]

[workspace.package]
version = "0.30.0"
license = "Apache-2.0"
rust-version = "1.84" # NOTE: remember to update CI, contributing.md, changelog.md, and install-and-setup.md
edition = "2021"
readme = "README.md"
homepage = "https://github.com/jj-vcs/jj"
repository = "https://github.com/jj-vcs/jj"
documentation = "https://jj-vcs.github.io/jj/"
categories = ["version-control", "development-tools"]
keywords = ["VCS", "DVCS", "SCM", "Git", "Mercurial"]

[workspace.dependencies]
assert_cmd = "2.1.2"
assert_matches = "1.5.0"
async-trait = "0.1.89"
blake2 = "0.10.6"
bstr = "1.12.1"
clap = { version = "4.5.54", features = [
    "derive",
    "deprecated",
    "wrap_help",
    "string",
] }
clap_complete = { version = "4.5.65", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.5.10"
# Update clap-markdown manually since test_generate_md_cli_help snapshot
# will need regenerating.
clap-markdown = "=0.1.5"
clap_mangen = "0.2.31"
chrono = { version = "0.4.43", default-features = false, features = [
    "std",
    "clock",
] }
clru = "0.6.2"
criterion = "0.7.0"
crossterm = { version = "0.29", default-features = false, features = ["windows"] }
datatest-stable = "0.3.3"
digest = "0.10.7"
dunce = "1.0.5"
etcetera = "0.10.0"
either = "1.15.0"
futures = "0.3.31"
gix = { version = "0.77.0", default-features = false, features = [
    "attributes",
    "blob-diff",
    "index",
    "max-performance-safe",
    "zlib-rs",
] }
glob = "0.3.3"
hashbrown = { version = "0.16.1", default-features = false, features = ["inline-more"] }
hex = "0.4.3"
ignore = "0.4.25"
indexmap = { version = "2.13.0", features = ["serde"] }
indoc = "2.0.7"
insta = { version = "1.46.1", features = ["filters"] }
interim = { version = "0.2.1", features = ["chrono_0_4"] }
itertools = "0.14.0"
libc = { version = "0.2.180" }
maplit = "1.0.2"
num_cpus = "1.17.0"
once_cell = "1.21.3"
os_pipe = "1.2.3"
pest = "2.8.5"
pest_derive = "2.8.5"
pollster = "0.4.0"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.105"
prost = "0.14.3"
prost-build = "0.14.3"
quote = "1.0.43"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
ref-cast = "1.0.25"
regex = "1.12.2"
rpassword = "7.4.0"
rustix = { version = "1.1.3", features = ["fs"] }
same-file = "1.0.6"
sapling-renderdag = "0.1.0"
sapling-streampager = "0.12.0"
scm-record = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
slab = "0.4.11"
smallvec = { version = "1.15.1", features = [
    "const_generics",
    "const_new",
    "union",
] }
strsim = "0.11.1"
syn = "2.0.114"
tempfile = "3.24.0"
test-case = "3.3.1"
textwrap = "0.16.2"
thiserror = "2.0.18"
timeago = { version = "0.5.0", default-features = false }
tokio = { version = "1.49.0", features = ["io-util"] }
toml_edit = { version = "0.24.0", features = ["serde"] }
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "std",
    "ansi",
    "env-filter",
    "fmt",
] }
unicode-width = "0.2.0"
version_check = "0.9.5"
watchman_client = { version = "0.9.0" }
whoami = "2.0.2"
winreg = "0.55"

# put all inter-workspace libraries, i.e. those that use 'path = ...' here in
# their own (alphabetically sorted) block

jj-lib = { path = "lib", version = "0.30.0", default-features = false }
jj-lib-proc-macros = { path = "lib/proc-macros", version = "0.30.0" }
testutils = { path = "lib/testutils" }

[workspace.lints.clippy]
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
needless_for_each = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unused_trait_names = "warn"
useless_conversion = "warn"

# Insta suggests compiling these packages in opt mode for faster testing.
# See https://docs.rs/insta/latest/insta/#optional-faster-runs.
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
strip = "debuginfo"
codegen-units = 1
